--- a/src/main/resources/com/example/bomberman/view/ctf-game-view.fxml
+++ b/src/main/resources/com/example/bomberman/view/ctf-game-view.fxml
@@ -4,12 +4,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.geometry.Insets?>
 
 <BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            styleClass="game-container">
+            styleClass="game-container"
+            fx:controller="com.example.bomberman.controller.CTFGameController">
 
     <top>
         <HBox alignment="CENTER" spacing="20" styleClass="header">
@@ -40,17 +40,5 @@
     <center>
         <Canvas fx:id="gameCanvas" width="600" height="520" />
     </center>
-    
-    <bottom>
-        <HBox alignment="CENTER" spacing="20" styleClass="footer">
-            <padding>
-                <Insets top="10" bottom="10" left="20" right="20" />
-            </padding>
-            
-            <Button fx:id="pauseButton" text="Pause" onAction="#togglePause" />
-            <Button fx:id="restartButton" text="Recommencer" onAction="#restartGame" />
-            <Button fx:id="quitButton" text="Quitter" onAction="#quitGame" />
-        </HBox>
-    </bottom>
 
 </BorderPane> 
